# Franka-Galaxy

./: .gitignore  CMakeLists.txt  README.md  package.xml
doc/: add_grub_to_auto_show.txt  alternative_real-time_kernel_INSTALLATION_process.txt  franka_network setup_no_AAU_common_network.txt  running_examples.txt
doc/HMI_panel/: HMI_Modbus Panel_v1.0.json  modbus_panel_manual.docx
doc/installation_manuals/: alternative_real-time_kernel_INSTALLATION_process.txt
frankx/examples/: home.py
include/franka_driver/: franka_driver.h
include/franka_plugin/: franka_driver.h  joint_pose_motion_generator.h
src/: NOT_DONE_franka_ros_plugin.cpp  example_franka_driver.cpp  example_franka_web_API.py  franka_driver.cpp  franka_node.cpp  franka_plugin.cpp  franka_web_API.py  frankx_test.cpp  how_to_frankx_not_updated.txt  joint_pose_motion_generator.cpp  python2_read_status_example.py  python3_read_status_example.py  web_interface_python.py  where_i_stopped.txt  zentropa_franka.cpp
src/HMI_panel/: HMI_AAU_demo.task  HMI_Modbus Panel_v1.0.json  HMI_PKJ_demo(doesnt_work).task  modbus_panel_manual.docx
src/garbage/: franka_webAPI.cpp
src/little_helper_demo/: python2_read_status_example.py
srv/: bool_key.srv
