<?xml version="1.0"?>
<package format="2">
  <name>franka_plugin</name>
  <version>0.0.1</version>
  <description>The franka_plugin package for AAU Skill Based System framework</description>

  <!-- This email will be active until July 2021.-->
  <maintainer email="jgalak16@student.aau.dk">Jevgenijs Galaktionovs</maintainer>
  <!-- Alternative email-->
  <!--<maintainer email="jga@reallyarobot.com">Jevgenijs Galaktionovs</maintainer>-->

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>

  </export>
</package>
